@@ -1,0 +1,9 @@
+{
+"name" : "QT 5 Classes Plugin",
+"version" : "0.0.1",
+"toolkitname" : "QT 5 Classes",
+"usefor" : "C++"
+}
+
+
+
